# dj_haystack_elastic_search

./: .gitignore  README.md  pyproject.toml
core/: settings.py  urls.py
core/settings/: base.py  dev.py  prod.py
searches/: models.py  search_indexes.py  serializers.py  urls.py  views.py
searches/migrations/: 0001_initial.py
