[tool.poetry]
name = "dj_haystack_elastic_search"
version = "0.1.0"
description = ""
authors = ["surajmt8848 <suraj8848mt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
djangorestframework = "^3.12.4"
Pillow = "^8.2.0"
black = "^21.4b2"
isort = "^5.8.0"
djangorestframework-camel-case = "^1.2.0"
django-cors-headers = "^3.7.0"
django-storages = "^1.11.1"
django-haystack = "^3.0"
elasticsearch = "^5.0"
drf-haystack = "^1.8.9"
geopy = "^2.1.0"
django-haystack-elasticsearch = "^0.1.0"
django-utils-six = "^2.0"
pysolr = "^3.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
